syntax = "proto2";

option java_package = "io.kagera.akka";

message Edge {
    optional int32 from = 1;
    optional int32 to = 2;
    optional int32 weight = 3;
}

message ProcessCreated {
    repeated Edge place_transition_edges = 1;
    repeated Edge transition_place_edges = 2;
}

message SerializedData {
   optional int32 serializer_id = 1;
   optional bytes manifest = 2;
   optional bytes data = 3;
}

message ConsumedToken {
    optional int32 place_id = 1;
    optional int32 token_id = 2;
    optional int32 count = 3;
}

message ProducedToken {
    optional int32 place_id = 1;
    optional int32 token_id = 2;
    optional int32 count = 3;
    optional SerializedData token_data = 4;
}

message TransitionFired {
   optional int64 job_id = 1;
   optional int64 transition_id = 2;
   optional int64 time_started = 3;
   optional int64 time_completed = 4;
   repeated ConsumedToken consumed = 5;
   repeated ProducedToken produced = 6;
   optional SerializedData data = 7;
}

message TransitionFailed {
   optional int64 transition_id = 1;
   optional int64 time_started = 2;
   optional string reason = 3;
}